// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Completed 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="px-2 py-1 text-sm text-bf500 w-full font-bold whitespace-nowrap overflow-ellipsis overflow-hidden"
  >
    feuille de route des élus responsables CAE.pdf
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Failed Duplicate 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
        >
          fichier.doc
        </div>
        <div
          className="text-sm min-w-max text-grey625 pl-2"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
    >
       
      Ce fichier a déjà été téléversé. Il peut être ajouté depuis la bibliothèque.
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Failed Format And Size 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
        >
          mauvais format et taille.exe
        </div>
        <div
          className="text-sm min-w-max text-grey625 pl-2"
        >
          (
          80 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
    >
       
      Ce fichier ne peut pas être téléversé car son format n’est pas supporté et il dépasse la taille maximale autorisée
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Failed To Upload 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
        >
          fichier.doc
        </div>
        <div
          className="text-sm min-w-max text-grey625 pl-2"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
    >
       
      Ce fichier n’a pas pu être téléversé
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Failed Too Big 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
        >
          Rapport d’activités 2019-2020 et rapport DD 2020 nom vraiment trop long.doc
        </div>
        <div
          className="text-sm min-w-max text-grey625 pl-2"
        >
          (
          60 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
    >
       
      Ce fichier ne peut pas être téléversé car il dépasse la taille maximale autorisée
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Failed Unknown Format 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap overflow-ellipsis overflow-hidden"
        >
          Logo-comcom.SVG
        </div>
        <div
          className="text-sm min-w-max text-grey625 pl-2"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
    >
       
      Ce fichier ne peut pas être téléversé car son format n’est pas supporté
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Running 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="pl-2 pr-4 py-1 flex justify-between"
  >
    <div
      className="w-8/12 flex justify-between"
    >
      <div
        className="text-sm font-bold whitespace-nowrap overflow-ellipsis overflow-hidden"
      >
        Délibération-Engagement-PCAET.pdf
      </div>
      <div
        className="min-w-max text-sm text-grey625 pl-2"
      >
        (
        87 Ko
        )
      </div>
    </div>
    <div
      className="w-3/12 flex items-center"
    >
      <div
        className="w-80 h-3.5 inline-block"
      >
        <div
          className="w-full h-full bg-grey925"
        >
          <div
            className="h-full bg-bf525 max-w-full"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line undefined"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Ui/Shared/Actions/Add Preuve/File Item Running 2 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="pl-2 pr-4 py-1 flex justify-between"
  >
    <div
      className="w-8/12 flex justify-between"
    >
      <div
        className="text-sm font-bold whitespace-nowrap overflow-ellipsis overflow-hidden"
      >
        Rapport d’activités 2019-2020 et rapport DD 2020.doc
      </div>
      <div
        className="min-w-max text-sm text-grey625 pl-2"
      >
        (
        8.35 Mo
        )
      </div>
    </div>
    <div
      className="w-3/12 flex items-center"
    >
      <div
        className="w-80 h-3.5 inline-block"
      >
        <div
          className="w-full h-full bg-grey925"
        >
          <div
            className="h-full bg-bf525 max-w-full"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line undefined"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
